--- a/lecture02/bloque02/script3/parrafos-inteligentes.html
+++ b/lecture02/bloque02/script3/parrafos-inteligentes.html
@@ -4,11 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src= "parrafos-inteligentes.js" defer></script>
-    <link rel="stylesheet" href="style.css">
-    <title>SCRIPT1</title>
+    <title>Document</title>
 </head>
 <body>
-   
+    
 </body>
-
 </html>
